<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/widget_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/widget_background"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="10dp">

    <LinearLayout
        android:id="@+id/widget_text"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginEnd="5dp"
        android:layout_weight="1"
        android:background="@drawable/widget_text_button"
        android:contentDescription="@string/widget_text_description"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_text_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@null"
            android:src="@drawable/widget_note_icon" />

        <TextView
            android:id="@+id/widget_text_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:includeFontPadding="false"
            android:text="@string/widget_text"
            android:textColor="#315BEA"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/widget_audio"
        android:layout_width="0dp"
        android:layout_height="52dp"
        android:layout_marginStart="5dp"
        android:layout_weight="1"
        android:background="@drawable/widget_audio_button"
        android:contentDescription="@string/widget_audio_description"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/widget_audio_icon"
            android:layout_width="18dp"
            android:layout_height="18dp"
            android:contentDescription="@null"
            android:src="@drawable/widget_mic_icon" />

        <TextView
            android:id="@+id/widget_audio_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:includeFontPadding="false"
            android:text="@string/widget_audio"
            android:textColor="#FFFFFF"
            android:textSize="14sp"
            android:textStyle="bold" />
    </LinearLayout>
</LinearLayout>
